--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-apollo": "^2.4.1",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "react-highlight.js": "^1.0.7",
     "react-i18next": "^10.0.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
