--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,1 @@
-# Define your endpoint to an GraphQL backend
-# View the sample under [TODO]
-APOLLO_API_URL=http://0.0.0.0:3000/graphql
+APOLLO_API_URL=https://rails-devise-test-4.herokuapp.com/graphql
