adding stripe to app

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-sitemap": "^2.0.5",
+    "gatsby-plugin-stripe-checkout": "^1.1.2",
     "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.20",
@@ -45,6 +46,7 @@
     "react-highlight.js": "^1.0.7",
     "react-i18next": "^10.0.0",
     "react-redux": "^6.0.0",
+    "react-stripe-elements": "^2.0.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
